<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="215dp"
            android:text="@string/poor"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="400dp"
            android:text="@string/average"
            android:textColor="@color/amber"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="470dp"
            android:text="@string/good"
            android:textColor="@color/green"
            android:textSize="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/interesting2" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/seekBar"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginLeft="27dp"
            android:textColor="@color/white" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment"
            android:layout_marginLeft="22dp"
            android:onClick="addInterestingComment"
            android:id = "@+id/addBtnInteresting"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_comment"
            android:layout_marginLeft="22dp"
            android:onClick="removeInterestingComment"
            android:id = "@+id/rmvBtnInteresting"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            >
        </Spinner>

    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/interactive2" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/seekBarInteractive"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginLeft="27dp"
            android:textColor="@color/white" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment"
            android:layout_marginLeft="22dp"
            android:onClick="addInteractiveComment"
            android:id = "@+id/addBtnInteractive"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_comment"
            android:layout_marginLeft="22dp"
            android:onClick="removeInteractiveComment"
            android:id = "@+id/rmvBtnInteractive"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerInteractive"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            >
        </Spinner>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/informative2" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="6dp"
            android:id="@+id/seekBarInformative"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginLeft="27dp"
            android:textColor="@color/white" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment"
            android:layout_marginLeft="22dp"
            android:onClick="addInformativeComment"
            android:id = "@+id/addBtnInformative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_comment"
            android:layout_marginLeft="22dp"
            android:onClick="removeInformativeComment"
            android:id = "@+id/rmvBtnInformative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerInformative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            >
        </Spinner>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intelligible2" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/seekBarIntelligible"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginLeft="27dp"
            android:textColor="@color/white" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment"
            android:layout_marginLeft="22dp"
            android:onClick="addIntelligibleComment"
            android:id = "@+id/addBtnIntelligible"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_comment"
            android:layout_marginLeft="22dp"
            android:onClick="removeIntelligibleComment"
            android:id = "@+id/rmvBtnIntelligible"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerIntelligible"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            >
        </Spinner>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/innovative2" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/seekBarInnovative"
            android:layout_weight="1"
            android:indeterminate="false"
            android:layout_marginLeft="23dp"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginLeft="27dp"
            android:textColor="@color/white" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment"
            android:layout_marginLeft="22dp"
            android:onClick="addInnovativeComment"
            android:id = "@+id/addBtnInnovative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_comment"
            android:layout_marginLeft="22dp"
            android:onClick="removeInnovativeComment"
            android:id = "@+id/rmvBtnInnovative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:background="@drawable/btn_black"
            android:textColor="@color/white"
            />

        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerInnovative"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            >
        </Spinner>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/button_send"
                android:background="@drawable/btn_white"
                android:onClick="sendFeedback"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textSize="15pt"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

